# sales_agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
docs/: scraping_status.md
scripts/: demo_test.py  scrape_kavak.py  setup_knowledge_base.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  kavak_agent.py  prompts.py  redis_memory.py
src/core/: __init__.py  exceptions.py  logging.py  middleware.py
src/knowledge/: __init__.py  kavak_knowledge.py
src/models/: __init__.py
src/schemas/: responses.py
src/tools/: __init__.py  car_search.py  financing.py  kavak_info.py
src/webhook/: __init__.py  twilio_handler.py
tests/: conftest.py  run_tests.py  test_basic.py
tests/e2e/: test_api_endpoints.py
tests/integration/: test_agent_tools.py
tests/unit/: test_car_search.py  test_financing.py  test_kavak_knowledge.py  test_localization.py  test_redis_memory.py
